# crypto-agent-factory

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  operations_guide.docx  pyproject.toml
.backup_pre_v04/: live_runner.py  reports.py
.backup_pre_v05/: charts.py  live_runner.py  reports.py  signal_generator.py
config/strategies/: cross_sectional_momentum.yaml  funding_rate_mean_reversion.yaml  volatility_breakout.yaml
config/templates/: decision_memo_template.yaml  experiment_template.yaml
docs/: ARCHITECTURE.md
experiments/: channel_breakout_report.md  funding_rate_arb_report.md  funding_rate_momentum_report.md  liquidation_dip_buying_report.md  liquidation_mean_reversion_report.md  macd_trend_following_report.md  mean_reversion_bollinger_report.md  range_squeeze_expansion_report.md  rsi_oversold_bounce_report.md  supertrend_adx_report.md  trend_ema_cross_report.md  vol_regime_switch_report.md  volatility_breakout_report.md
src/: __init__.py  cli.py  config.py  main.py  server.py
src/agents/: __init__.py  auditor.py  backtesting_engineer.py  base.py  data_engineer.py  feature_engineer.py  market_analyst.py  paper_trading.py  portfolio_construction.py  quant_formalization.py  research_director.py  risk_manager.py  statistician.py  strategy_ideation.py
src/backtesting/: __init__.py  benchmark.py  charts.py  funding_data.py  live_runner.py  robustness.py  signal_generator.py  walk_forward.py
src/data/: __init__.py
src/models/: __init__.py
tests/: __init__.py  test_backtesting.py  test_models.py  test_registry.py
(+4 files in other folders)
